# SlicerBoneReconstructionPlanner

./: BoneReconstructionPlanner.gltf  CITATION.bib  CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
AddMagnetsToModel/: AddMagnetsToModel.py  CMakeLists.txt
AddMagnetsToModel/Resources/UI/: AddMagnetsToModel.ui
BoneReconstructionPlanner/: BoneReconstructionPlanner.py  CMakeLists.txt
BoneReconstructionPlanner/BRPLib/: guiWidgets.py  helperFunctions.py
BoneReconstructionPlanner/Resources/UI/: BoneReconstructionPlanner.ui
Docs/: Design.pptx  NOTES.md
TLA/BoneReconstructionPlanner.toolbox/: .project  BoneReconstructionPlanner___BoneReconstructionPlanner.launch  BoneReconstructionPlanner___BoneReconstructionPlanner_SnapShot_1655329428609.launch  BoneReconstructionPlanner___BoneReconstructionPlanner_SnapShot_1655329513405.launch  BoneReconstructionPlanner___BoneReconstructionPlanner_SnapShot_1655329586172.launch  BoneReconstructionPlanner___BoneReconstructionPlanner_SnapShot_1655329689140.launch  BoneReconstructionPlanner___BoneReconstructionPlanner_SnapShot_1655329731903.launch
TLA/BoneReconstructionPlanner.toolbox/BoneReconstructionPlanner/: BoneReconstructionPlanner.tla  MC.tla
TLA/BoneReconstructionPlanner.toolbox/BoneReconstructionPlanner/22-06-15-18-48-48/: MC-0.st  MC-1.st  MC-2.st
TLA/BoneReconstructionPlanner.toolbox/BoneReconstructionPlanner_SnapShot_1655329428609/: BoneReconstructionPlanner.tla  MC.cfg  MC.out  MC.tla
TLA/BoneReconstructionPlanner.toolbox/BoneReconstructionPlanner_SnapShot_1655329513405/: BoneReconstructionPlanner.tla  MC.cfg  MC.out  MC.tla
TLA/BoneReconstructionPlanner.toolbox/BoneReconstructionPlanner_SnapShot_1655329586172/: BoneReconstructionPlanner.tla  MC.cfg  MC.tla  MC_TE.out
TLA/BoneReconstructionPlanner.toolbox/BoneReconstructionPlanner_SnapShot_1655329689140/: MC.cfg  MC.tla  MC_TE.out
TLA/BoneReconstructionPlanner.toolbox/BoneReconstructionPlanner_SnapShot_1655329731903/: MC.cfg  MC.out
